--- a/src/etl_architect_agent_v2/ui/package.json
+++ b/src/etl_architect_agent_v2/ui/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/lab": "^5.0.0-alpha.165",
-    "@mui/material": "^5.17.1",
+    "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.4",
     "@tanstack/react-query": "^4.36.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,11 +18,15 @@
     "@types/node": "^16.18.80",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.7",
+    "cookie": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "set-cookie-parser": "^2.7.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
