--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,59 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
 venv/
+ENV/
+env/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Environment Variables
+.env
+.env.local
+.env.*.local
+
+# AWS
+.aws/
+aws.json
+
+# Logs
+*.log
 logs/
+
+# Test Coverage
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Distribution
+dist/
+build/
+*.egg-info/
+
 src/etl_architect_agent_v2/ui/node_modules/
-__pycache__
 
