--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
-langchain>=0.1.0
-langchain-community>=0.0.10
-langchain-anthropic>=0.0.1
-openai>=1.0.0
-anthropic>=0.5.0
+boto3>=1.34.0
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
 python-dotenv>=1.0.0
 tenacity>=8.2.0
-pydantic>=2.7.0,<3.0.0
 typing-extensions>=4.5.0
-boto3>=1.28.0
-pandas>=2.0.0
-pytest>=7.0.0
+pandas>=2.2.2
 moto>=4.0.0
 aws-cdk-lib>=2.120.0
 constructs>=10.3.0
@@ -29,11 +24,20 @@ markdown>=3.5.1
 jinja2>=3.1.2
 flask==3.0.2
 flask-cors==4.0.0
-fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
-pyarrow==14.0.1
+pyarrow==15.0.2
 openpyxl==3.1.2
 fastavro==1.8.2
 httpx==0.25.2
 langchain-core>=0.3.58 
+fastapi
+uvicorn
+langchain>=0.1.0
+langchain-community>=0.0.20
+langgraph>=0.0.30
+boto3
+pydantic==2.7.4
+requests
+pytest
+numpy<2
