--- a/src/etl_architect_agent_v2/ui/package.json
+++ b/src/etl_architect_agent_v2/ui/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.10",
+    "@mui/icons-material": "^5.17.1",
     "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.4",
@@ -19,6 +19,7 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
+    "@types/recharts": "^1.8.24",
     "axios": "^1.6.7",
     "cookie": "^0.5.0",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.7.2",
     "set-cookie-parser": "^2.7.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -53,5 +55,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.0",
+    "babel-loader": "^10.0.0",
+    "html-webpack-plugin": "^5.5.4",
+    "webpack-dev-server": "^5.2.1"
   }
 }
