--- a/src/etl_architect_agent_v2/ui/package.json
+++ b/src/etl_architect_agent_v2/ui/package.json
@@ -20,6 +20,9 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
     "@types/recharts": "^1.8.24",
+    "@types/xlsx": "^0.0.35",
+    "ag-grid-community": "^31.1.1",
+    "ag-grid-react": "^31.1.1",
     "axios": "^1.6.7",
     "cookie": "^0.5.0",
     "react": "^18.2.0",
@@ -30,7 +33,8 @@
     "recharts": "^2.7.2",
     "set-cookie-parser": "^2.7.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
